# seaorm_demo

./: .env  .gitignore  Cargo.toml  README.md
entity/src/: author.rs  lib.rs  post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: lib.rs
